--- a/GasDetectorApp/app/src/main/assets/index.html
+++ b/GasDetectorApp/app/src/main/assets/index.html
@@ -84,34 +84,34 @@
             <canvas id="chart-area"></canvas>
         </div>
 
-        <table class="result-table">
+        <!--<table class="result-table">-->
 
-            <tr>
-                <th>Name</th>
-                <th>Percentage</th>
-            </tr>
+            <!--<tr>-->
+                <!--<th>Name</th>-->
+                <!--<th>Percentage</th>-->
+            <!--</tr>-->
 
-            <tr class="result-row">
-                <td><span class="color" style="background-color: #ffffff;"></span>Name</td>
-                <td>Value</td>
-            </tr>
+            <!--<tr class="result-row">-->
+                <!--<td><span class="color" style="background-color: #ffffff;"></span>Name</td>-->
+                <!--<td>Value</td>-->
+            <!--</tr>-->
 
-            <tr class="result-row">
-                <td><span class="color"></span>Name</td>
-                <td>Value</td>
-            </tr>
+            <!--<tr class="result-row">-->
+                <!--<td><span class="color"></span>Name</td>-->
+                <!--<td>Value</td>-->
+            <!--</tr>-->
 
-            <tr class="result-row">
-                <td><span class="color"></span>Name</td>
-                <td>Value</td>
-            </tr>
+            <!--<tr class="result-row">-->
+                <!--<td><span class="color"></span>Name</td>-->
+                <!--<td>Value</td>-->
+            <!--</tr>-->
 
-            <tr class="result-row">
-                <td><span class="color"></span>Name</td>
-                <td>Value</td>
-            </tr>
+            <!--<tr class="result-row">-->
+                <!--<td><span class="color"></span>Name</td>-->
+                <!--<td>Value</td>-->
+            <!--</tr>-->
 
-        </table>
+        <!--</table>-->
 
         <a href="#" class="back-to-result back-link">Back</a>
 
@@ -125,67 +125,7 @@
 <script type="text/javascript" src="com/js/jquery-1.8.2.min.js"></script>
 <script type="text/javascript" src="com/js/main.js"></script>
 <script type="text/javascript" src="com/js/app.js"></script>
-
-
-<script>
-
-    <!-- JS Hooks -->
-
-    function connectDeviceHook(){
-
-        // add connection code here
-       // var connected = window.JSInterface.connectToDevice();
-        if(window.JSInterface.connectToDevice()) app.deviceConnected();
-       //  //if connected then call this func and remove timeout
-      //  setTimeout(function(){
-
-     //     app.deviceConnected();
-
-      //  }, 1000);
-
-    }
-
-    function startAnalyzingHook(){
-
-        // start analyzing code here
-        var analyse = window.JSInterface.analyze();
-        if( window.JSInterface.analyze()) {
-
-
-        }
-
-
-
-    }
-
-
-    // just some default values
-
-    var _chart_labels = [
-
-    ];
-
-    var _chart_data = [
-
-    ];
-
-    var _chart_colors = [
-
-    ];
-
-
-
-    $(document).ready(function(){
-
-        visual.init();
-        app.init();
-
-    });
-
-
-</script>
-
-
+<script type="text/javascript" src="com/js/backEndFunctions.js"></script>
 
 </body>
 </html>
