--- a/GasDetectorApp/app/src/main/assets/index.html
+++ b/GasDetectorApp/app/src/main/assets/index.html
@@ -78,41 +78,11 @@
 
     <div class="wrapper">
 
-        <h3>Details</h3>
+        <!--<h3>Details</h3>-->
 
-        <div id="canvas-holder" style="width:100%">
-            <canvas id="chart-area"></canvas>
+        <div id="canvas-holder" >
+            <canvas id="chart-area" width="300" height="600" ></canvas>
         </div>
-
-        <!--<table class="result-table">-->
-
-            <!--<tr>-->
-                <!--<th>Name</th>-->
-                <!--<th>Percentage</th>-->
-            <!--</tr>-->
-
-            <!--<tr class="result-row">-->
-                <!--<td><span class="color" style="background-color: #ffffff;"></span>Name</td>-->
-                <!--<td>Value</td>-->
-            <!--</tr>-->
-
-            <!--<tr class="result-row">-->
-                <!--<td><span class="color"></span>Name</td>-->
-                <!--<td>Value</td>-->
-            <!--</tr>-->
-
-            <!--<tr class="result-row">-->
-                <!--<td><span class="color"></span>Name</td>-->
-                <!--<td>Value</td>-->
-            <!--</tr>-->
-
-            <!--<tr class="result-row">-->
-                <!--<td><span class="color"></span>Name</td>-->
-                <!--<td>Value</td>-->
-            <!--</tr>-->
-
-        <!--</table>-->
-
         <a href="#" class="back-to-result back-link">Back</a>
 
     </div>
