--- a/GasDetectorApp/app/src/main/assets/index.html
+++ b/GasDetectorApp/app/src/main/assets/index.html
@@ -66,7 +66,7 @@
         <h1 class="result-name">Gas name</h1>
 
         <div class="bottom">
-            <a href="#" class="details-button button">Details</a>
+            <a href="#" class="details-button button">Watch graphs</a>
             <a href="#" class="back-to-start back-link">Back</a>
         </div>
 
