adding new functionalities

--- a/SmartBadgesApp/app/src/main/assets/index.html
+++ b/SmartBadgesApp/app/src/main/assets/index.html
@@ -237,7 +237,6 @@
 
                     <li>
                         <div class="app-config-row">
-                            <div class="icon"><i class="fa fa-lg fa-facebook fa-lg"></i></div>
                             <div class="name">facebook</div>
                             <div class="color" data-color="0">
                                 <div class="app-color-preview"></div>
@@ -245,15 +244,14 @@
                             <div class="count" data-count="4">
                                 <span></span>
                                 <span></span>
-                                <span></span>
-                                <span></span>
+                                <!--<span></span>-->
+                                <!--<span></span>-->
                             </div>
                         </div>
                     </li>
 
                     <li>
                         <div class="app-config-row">
-                            <div class="icon"><i class="fa fa-lg fa-twitter fa-lg"></i></div>
                             <div class="name">Twitter</div>
                             <div class="color" data-color="0">
                                 <div class="app-color-preview"></div>
@@ -269,7 +267,6 @@
 
                     <li>
                         <div class="app-config-row">
-                            <div class="icon"><i class="fa fa-lg fa-whatsapp fa-lg"></i></div>
                             <div class="name">Whatsapp</div>
                             <div class="color" data-color="0">
                                 <div class="app-color-preview"></div>
@@ -285,7 +282,6 @@
 
                     <li>
                         <div class="app-config-row">
-                            <div class="icon"><i class="fa fa-lg fa-instagram fa-lg"></i></div>
                             <div class="name">Instagram</div>
                             <div class="color" data-color="0">
                                 <div class="app-color-preview"></div>
@@ -298,6 +294,7 @@
                             </div>
                         </div>
                     </li>
+                </ul>
                 <a href="#" class="button save-contacts">DONE</a>
             </div>
         </div>
