--- a/Gas detector application/GasDetectorApp/app/src/main/assets/index.html
+++ b/Gas detector application/GasDetectorApp/app/src/main/assets/index.html
@@ -83,6 +83,34 @@
         <div id="canvas-holder" >
             <canvas id="chart-area" width="300" height="600" ></canvas>
         </div>
+        <table class="result-table">
+
+            <tr>
+                <th>Name</th>
+                <th>Number</th>
+            </tr>
+
+            <!--<tr class="result-row">-->
+                <!--<td>Name</td>-->
+                <!--<td>Value</td>-->
+            <!--</tr>-->
+
+            <!--<tr class="result-row">-->
+                <!--<td>Name</td>-->
+                <!--<td>Value</td>-->
+            <!--</tr>-->
+
+            <!--<tr class="result-row">-->
+                <!--<td>Name</td>-->
+                <!--<td>Value</td>-->
+            <!--</tr>-->
+
+            <!--<tr class="result-row">-->
+                <!--<td>Name</td>-->
+                <!--<td>Value</td>-->
+            <!--</tr>-->
+
+        </table>
         <a href="#" class="back-to-result back-link">Back</a>
 
     </div>
