editing app.js from new design

--- a/SmartBadgesAppAndroid/app/src/main/assets/newIndex.html
+++ b/SmartBadgesAppAndroid/app/src/main/assets/newIndex.html
@@ -443,7 +443,7 @@
                         </div>
                     </li>
                 </ul>
-                <a href="#" class="button save-contacts">DONE</a>
+                <a href="#" class="button save-calendar">DONE</a>
             </div>
         </div>
     </div>
