--- a/SmartBadgesAppAndroid/app/src/main/assets/newIndex.html
+++ b/SmartBadgesAppAndroid/app/src/main/assets/newIndex.html
@@ -35,16 +35,17 @@
                         <i class="fa fa-lg fa-bell fa-lg"></i> Notifications
                     </a>
                 </li>
-                <!--<li>-->
-                    <!--<a href="#" class="contacts-trigger">-->
-                        <!--<i class="fa fa-lg fa-user fa-lg"></i> Contacts-->
-                    <!--</a>-->
-                <!--</li>-->
                 <li>
                     <a href="#" class="calendar-trigger">
                         <i class="fa fa-lg fa-calendar fa-lg"></i> Calendar
                     </a>
                 </li>
+                <!--<li>-->
+                    <!--<a href="#" class="contacts-trigger">-->
+                        <!--<i class="fa fa-lg fa-user fa-lg"></i> Contacts-->
+                    <!--</a>-->
+                <!--</li>-->
+
                 <!--<li>-->
                     <!--<a href="#" class="health-trigger">-->
                         <!--<i class="fa fa-lg fa-heart fa-lg"></i> Health-->
@@ -375,7 +376,7 @@
         <div class="container">
             <div class="wrapper">
                 <h2>Calendar</h2>
-                <p>Tab on the colored area and the buzzer points to change notification settings.</p>
+                <p>Tab in the 'done' button to create all the alarms.</p>
                 <ul>
                     <li class="list-header">
                         <div class="name">Name</div>
