More minor bugs corrected

--- a/SmartBadgesAppAndroid/app/src/main/assets/newIndex.html
+++ b/SmartBadgesAppAndroid/app/src/main/assets/newIndex.html
@@ -115,7 +115,8 @@
     <div class="page home">
         <div class="container">
             <div class="wrapper">
-                <h2>Welcome to <br />bling:me</h2>
+                <!--<h2>Welcome to <br />bling:me</h2>-->
+                <h2>Welcome to <br />SmartBadgeApp</h2>
                 <p>Open the menu to configure your notifications.</p>
             </div>
         </div>
@@ -327,7 +328,7 @@
                         <!--</div>-->
                     <!--</li>-->
                 </ul>
-                <a href="#" class="button save-notifications">DONE</a>
+                <a href="#" class="button save-calendar">DONE</a>
             </div>
         </div>
     </div>
