app can read notifications and create alarms

--- a/SmartBadgesAppIOS/SmartBadgeAppIOS/SmartBadgeAppIOS/FrontEndFiles/newIndex.html
+++ b/SmartBadgesAppIOS/SmartBadgeAppIOS/SmartBadgeAppIOS/FrontEndFiles/newIndex.html
@@ -138,7 +138,7 @@
 
                     <li>
                         <div class="app-config-row">
-                            <div class="icon"><i class="fa fa-lg fa-facebook fa-lg"></i></div>
+                            <div class="icon"><i class="fab fa-lg fa-facebook fa-lg"></i></div>
                             <div class="name">facebook</div>
                             <div class="color" data-color="0">
                                 <div class="app-color-preview"></div>
@@ -154,7 +154,7 @@
 
                     <li>
                         <div class="app-config-row">
-                            <div class="icon"><i class="fa fa-lg fa-twitter fa-lg"></i></div>
+                            <div class="icon"><i class="fab fa-lg fa-twitter fa-lg"></i></div>
                             <div class="name">Twitter</div>
                             <div class="color" data-color="0">
                                 <div class="app-color-preview"></div>
@@ -170,7 +170,7 @@
 
                     <li>
                         <div class="app-config-row">
-                            <div class="icon"><i class="fa fa-lg fa-whatsapp fa-lg"></i></div>
+                            <div class="icon"><i class="fab fa-lg fa-whatsapp fa-lg"></i></div>
                             <div class="name">Whatsapp</div>
                             <div class="color" data-color="0">
                                 <div class="app-color-preview"></div>
@@ -186,7 +186,7 @@
 
                     <li>
                         <div class="app-config-row">
-                            <div class="icon"><i class="fa fa-lg fa-instagram fa-lg"></i></div>
+                            <div class="icon"><i class="fab fa-lg fa-instagram fa-lg"></i></div>
                             <div class="name">Instagram</div>
                             <div class="color" data-color="0">
                                 <div class="app-color-preview"></div>
