first version of the ios apo is ready!

--- a/SmartBadgesAppIOS/SmartBadgeAppIOS/SmartBadgeAppIOS/FrontEndFiles/newIndex.html
+++ b/SmartBadgesAppIOS/SmartBadgeAppIOS/SmartBadgeAppIOS/FrontEndFiles/newIndex.html
@@ -216,21 +216,21 @@
                         </div>
                     </li>
 
-                    <li>
-                        <div class="app-config-row">
-                            <div class="icon"><i class="fa fa-lg fa-envelope fa-lg"></i></div>
-                            <div class="name">Messages</div>
-                            <div class="color" data-color="0">
-                                <div class="app-color-preview"></div>
-                            </div>
-                            <div class="count" data-count="1">
-                                <span></span>
-                                <span></span>
-                                <span></span>
-                                <span></span>
-                            </div>
-                        </div>
-                    </li>
+<!--                    <li>-->
+<!--                        <div class="app-config-row">-->
+<!--                            <div class="icon"><i class="fa fa-lg fa-envelope fa-lg"></i></div>-->
+<!--                            <div class="name">Messages</div>-->
+<!--                            <div class="color" data-color="0">-->
+<!--                                <div class="app-color-preview"></div>-->
+<!--                            </div>-->
+<!--                            <div class="count" data-count="1">-->
+<!--                                <span></span>-->
+<!--                                <span></span>-->
+<!--                                <span></span>-->
+<!--                                <span></span>-->
+<!--                            </div>-->
+<!--                        </div>-->
+<!--                    </li>-->
 
                     <!--<li>-->
                         <!--<div class="app-config-row">-->
