add modifications in the newIndexPage

--- a/SmartBadgesAppIOS/SmartBadgeAppIOS/SmartBadgeAppIOS/FrontEndFiles/newIndex.html
+++ b/SmartBadgesAppIOS/SmartBadgeAppIOS/SmartBadgeAppIOS/FrontEndFiles/newIndex.html
@@ -41,11 +41,11 @@
                         <i class="fa fa-lg fa-calendar fa-lg"></i> Calendar
                     </a>
                 </li>
-                <!--<li>-->
-                    <!--<a href="#" class="contacts-trigger">-->
-                        <!--<i class="fa fa-lg fa-user fa-lg"></i> Contacts-->
-                    <!--</a>-->
-                <!--</li>-->
+                <li>
+                    <a href="#" class="contacts-trigger">
+                        <i class="fa fa-lg fa-user fa-lg"></i> Contacts
+                    </a>
+                </li>
 
                 <!--<li>-->
                     <!--<a href="#" class="health-trigger">-->
@@ -216,117 +216,6 @@
                         </div>
                     </li>
 
-<!--                    <li>-->
-<!--                        <div class="app-config-row">-->
-<!--                            <div class="icon"><i class="fa fa-lg fa-envelope fa-lg"></i></div>-->
-<!--                            <div class="name">Messages</div>-->
-<!--                            <div class="color" data-color="0">-->
-<!--                                <div class="app-color-preview"></div>-->
-<!--                            </div>-->
-<!--                            <div class="count" data-count="1">-->
-<!--                                <span></span>-->
-<!--                                <span></span>-->
-<!--                                <span></span>-->
-<!--                                <span></span>-->
-<!--                            </div>-->
-<!--                        </div>-->
-<!--                    </li>-->
-
-                    <!--<li>-->
-                        <!--<div class="app-config-row">-->
-                            <!--<div class="icon"><i class="fa fa-lg fa-facebook fa-lg"></i></div>-->
-                            <!--<div class="name">facebook</div>-->
-                            <!--<div class="color" data-color="0">-->
-                                <!--<div class="app-color-preview"></div>-->
-                            <!--</div>-->
-                            <!--<div class="count" data-count="1">-->
-                                <!--<span></span>-->
-                                <!--<span></span>-->
-                                <!--<span></span>-->
-                                <!--<span></span>-->
-                            <!--</div>-->
-                        <!--</div>-->
-                    <!--</li>-->
-
-                    <!--<li>-->
-                        <!--<div class="app-config-row">-->
-                            <!--<div class="icon"><i class="fa fa-lg fa-twitter fa-lg"></i></div>-->
-                            <!--<div class="name">Twitter</div>-->
-                            <!--<div class="color" data-color="0">-->
-                                <!--<div class="app-color-preview"></div>-->
-                            <!--</div>-->
-                            <!--<div class="count">-->
-                                <!--<span></span>-->
-                                <!--<span></span>-->
-                                <!--<span></span>-->
-                                <!--<span></span>-->
-                            <!--</div>-->
-                        <!--</div>-->
-                    <!--</li>-->
-
-                    <!--<li>-->
-                        <!--<div class="app-config-row">-->
-                            <!--<div class="icon"><i class="fa fa-lg fa-whatsapp fa-lg"></i></div>-->
-                            <!--<div class="name">Whatsapp</div>-->
-                            <!--<div class="color" data-color="0">-->
-                                <!--<div class="app-color-preview"></div>-->
-                            <!--</div>-->
-                            <!--<div class="count" data-count="1">-->
-                                <!--<span></span>-->
-                                <!--<span></span>-->
-                                <!--<span></span>-->
-                                <!--<span></span>-->
-                            <!--</div>-->
-                        <!--</div>-->
-                    <!--</li>-->
-
-                    <!--<li>-->
-                        <!--<div class="app-config-row">-->
-                            <!--<div class="icon"><i class="fa fa-lg fa-instagram fa-lg"></i></div>-->
-                            <!--<div class="name">Instagram</div>-->
-                            <!--<div class="color" data-color="0">-->
-                                <!--<div class="app-color-preview"></div>-->
-                            <!--</div>-->
-                            <!--<div class="count" data-count="1">-->
-                                <!--<span></span>-->
-                                <!--<span></span>-->
-                                <!--<span></span>-->
-                                <!--<span></span>-->
-                            <!--</div>-->
-                        <!--</div>-->
-                    <!--</li>-->
-
-                    <!--<li>-->
-                        <!--<div class="app-config-row">-->
-                            <!--<div class="icon"><i class="fa fa-lg fa-phone fa-lg"></i></div>-->
-                            <!--<div class="name">Calls</div>-->
-                            <!--<div class="color" data-color="0">-->
-                                <!--<div class="app-color-preview"></div>-->
-                            <!--</div>-->
-                            <!--<div class="count" data-count="1">-->
-                                <!--<span></span>-->
-                                <!--<span></span>-->
-                                <!--<span></span>-->
-                                <!--<span></span>-->
-                            <!--</div>-->
-                        <!--</div>-->
-                    <!--</li>-->
-
-                    <!--<li>-->
-                        <!--<div class="app-config-row">-->
-                            <!--<div class="icon"><i class="fa fa-lg fa-envelope fa-lg"></i></div>-->
-                            <!--<div class="name">Messages</div>-->
-                            <!--<div class="color" data-color="0">-->
-                                <!--<div class="app-color-preview"></div>-->
-                            <!--</div>-->
-                            <!--<div class="count" data-count="1">-->
-                                <!--<span></span>-->
-                                <!--<span></span>-->
-                                <!--<span></span>-->
-                                <!--<span></span>-->
-                            <!--</div>-->
-                        <!--</div>-->
-                    <!--</li>-->
                 </ul>
                 <a href="#" class="button save-notifications">DONE</a>
             </div>
@@ -357,22 +246,40 @@
         </div>
     </div> -->
 
-    <!--<div class="page contacts scrollable">-->
-        <!--<div class="container">-->
-            <!--<div class="wrapper">-->
-                <!--<h2>Contacts</h2>-->
-                <!--<p>Manage your contacts` notifications</p>-->
-                <!--<p>Lorem ipsum dolor sit amet, consetetur sadipscing elitr, sed diam nonumy eirmod tempor invidunt ut labore et dolore magna aliquyam erat, sed diam voluptua. At vero eos et accusam et justo duo dolores et ea rebum.</p>-->
-                <!--<p>Lorem ipsum dolor sit amet, consetetur sadipscing elitr, sed diam nonumy eirmod tempor invidunt ut labore et dolore magna aliquyam erat, sed diam voluptua. At vero eos et accusam et justo duo dolores et ea rebum.</p>-->
-                <!--<p>Lorem ipsum dolor sit amet, consetetur sadipscing elitr, sed diam nonumy eirmod tempor invidunt ut labore et dolore magna aliquyam erat, sed diam voluptua. At vero eos et accusam et justo duo dolores et ea rebum.</p>-->
-                <!--<p>Lorem ipsum dolor sit amet, consetetur sadipscing elitr, sed diam nonumy eirmod tempor invidunt ut labore et dolore magna aliquyam erat, sed diam voluptua. At vero eos et accusam et justo duo dolores et ea rebum.</p>-->
-                <!--<p>Lorem ipsum dolor sit amet, consetetur sadipscing elitr, sed diam nonumy eirmod tempor invidunt ut labore et dolore magna aliquyam erat, sed diam voluptua. At vero eos et accusam et justo duo dolores et ea rebum.</p>-->
-                <!--<p>Lorem ipsum dolor sit amet, consetetur sadipscing elitr, sed diam nonumy eirmod tempor invidunt ut labore et dolore magna aliquyam erat, sed diam voluptua. At vero eos et accusam et justo duo dolores et ea rebum.</p>-->
-                <!--<a href="#" class="button save-contacts">DONE</a>-->
-            <!--</div>-->
-        <!--</div>-->
-    <!--</div>-->
-
+    <div class="page contacts scrollable">
+        <div class="container">
+            <div class="wrapper">
+                <h2>Contacts</h2>
+                <h2>Configure your contacts</h2>
+                <p>Tab on the colored area and the buzzer points to personalise settings.</p>
+                <ul>
+                    <!--<li class="list-header">-->
+                    <!--<div class="name">App name</div>-->
+                    <!--<div class="color">color</div>-->
+                    <!--<div class="count">brightness</div>-->
+                    <!--</li>-->
+                    
+                    <!--<li>-->
+                    <!--<div class="app-config-row">-->
+                    <!--<div class="icon"><i class="fa fa-lg fa-facebook fa-lg"></i></div>-->
+                    <!--<div class="name">facebook</div>-->
+                    <!--<div class="color" data-color="0">-->
+                    <!--<div class="app-color-preview"></div>-->
+                    <!--</div>-->
+                    <!--<div class="count" data-count="0">-->
+                    <!--<span></span>-->
+                    <!--<span></span>-->
+                    <!--<span></span>-->
+                    <!--<span></span>-->
+                    <!--</div>-->
+                    <!--</div>-->
+                    <!--</li>-->
+                </ul>
+                <a href="#" class="button save-contacts">DONE</a>
+            </div>
+        </div>
+    </div>
+    
     <div class="page calendar scrollable">
         <div class="container">
             <div class="wrapper">
@@ -432,7 +339,7 @@
 
                     <li>
                         <div class="app-config-row">
-                            <div class="name">Instagram</div>
+                            <div class="name">Instagram</div>s
                             <div class="color" data-color="0">
                                 <div class="app-color-preview"></div>
                             </div>
@@ -447,7 +354,7 @@
                 </ul>
                 <a href="#" class="button save-calendar">DONE</a>
             </div>
-        </div>
+        </div>sss
     </div>
 
     <!--<div class="page health scrollable">-->
