--- a/SmartBadgesAppIOS/SmartBadgeAppIOS/SmartBadgeAppIOS/FrontEndFiles/newIndex.html
+++ b/SmartBadgesAppIOS/SmartBadgeAppIOS/SmartBadgeAppIOS/FrontEndFiles/newIndex.html
@@ -200,21 +200,21 @@
                         </div>
                     </li>
 
-                    <li>
-                        <div class="app-config-row">
-                            <div class="icon"><i class="fa fa-lg fa-phone fa-lg"></i></div>
-                            <div class="name">Calls</div>
-                            <div class="color" data-color="0">
-                                <div class="app-color-preview"></div>
-                            </div>
-                            <div class="count" data-count="1">
-                                <span></span>
-                                <span></span>
-                                <span></span>
-                                <span></span>
-                            </div>
-                        </div>
-                    </li>
+<!--                    <li>-->
+<!--                        <div class="app-config-row">-->
+<!--                            <div class="icon"><i class="fa fa-lg fa-phone fa-lg"></i></div>-->
+<!--                            <div class="name">Calls</div>-->
+<!--                            <div class="color" data-color="0">-->
+<!--                                <div class="app-color-preview"></div>-->
+<!--                            </div>-->
+<!--                            <div class="count" data-count="1">-->
+<!--                                <span></span>-->
+<!--                                <span></span>-->
+<!--                                <span></span>-->
+<!--                                <span></span>-->
+<!--                            </div>-->
+<!--                        </div>-->
+<!--                    </li>-->
 
                 </ul>
                 <a href="#" class="button save-notifications">DONE</a>
