changes in the bling:me IOS projects

--- a/SmartBadgesAppIOS/SmartBadgeAppIOSBluetooth/SmartBadgeAppIOS/FrontEndFiles/newIndex.html
+++ b/SmartBadgesAppIOS/SmartBadgeAppIOSBluetooth/SmartBadgeAppIOS/FrontEndFiles/newIndex.html
@@ -41,27 +41,11 @@
                         <i class="fa fa-lg fa-calendar fa-lg"></i> Calendar
                     </a>
                 </li>
-                <li>
-                    <a href="#" class="contacts-trigger">
-                        <i class="fa fa-lg fa-user fa-lg"></i> Contacts
-                    </a>
-                </li>
-
-                <!--<li>-->
-                    <!--<a href="#" class="health-trigger">-->
-                        <!--<i class="fa fa-lg fa-heart fa-lg"></i> Health-->
-                    <!--</a>-->
-                <!--</li>-->
-                <!--<li>-->
-                    <!--<a href="#" class="preferences-trigger">-->
-                        <!--<i class="fa fa-lg fa-cog fa-lg"></i> Preferences-->
-                    <!--</a>-->
-                <!--</li>-->
-                <!--<li>-->
-                    <!--<a href="#" class="help-trigger">-->
-                        <!--<i class="fa fa-lg fa-question fa-lg"></i> Help-->
-                    <!--</a>-->
-                <!--</li>-->
+<!--                <li>-->
+<!--                    <a href="#" class="contacts-trigger">-->
+<!--                        <i class="fa fa-lg fa-user fa-lg"></i> Contacts-->
+<!--                    </a>-->
+<!--                </li>-->
             </ul>
 
         </div>
