finish the 2 projects first draft

--- a/SmartBadgesAppIOS/SmartBadgeAppIOSBluetooth/SmartBadgeAppIOS/FrontEndFiles/newIndex.html
+++ b/SmartBadgesAppIOS/SmartBadgeAppIOSBluetooth/SmartBadgeAppIOS/FrontEndFiles/newIndex.html
@@ -41,11 +41,11 @@
                         <i class="fa fa-lg fa-calendar fa-lg"></i> Calendar
                     </a>
                 </li>
-                <li>
-                    <a href="#" class="contacts-trigger">
-                        <i class="fa fa-lg fa-user fa-lg"></i> Contacts
-                    </a>
-                </li>
+<!--                <li>-->
+<!--                    <a href="#" class="contacts-trigger">-->
+<!--                        <i class="fa fa-lg fa-user fa-lg"></i> Contacts-->
+<!--                    </a>-->
+<!--                </li>-->
             </ul>
 
         </div>
